fix: Prevented passwords from being visible on JWTs, added tests for events.
